--- a/assets/styles/_weather.scss
+++ b/assets/styles/_weather.scss
@@ -9,8 +9,36 @@
   }
 
   &__results {
+    padding: rem(0 32px 0 100px);
+
+    &-day,
+    &-temperature,
+    &-humidity,
+    &-wind {
+      font-size: rem(24px);
+      line-height: rem(32px);
+    }
+
+    &-img {
+      width: rem(120px);
+      height: rem(120px);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+    }
   }
 
   &__calendar {
+    padding: rem(0 32px);
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
+  }
+
+  &__col {
+    &:not(:first-child) {
+      margin-left: rem(32px);
+    }
   }
 }
