--- a/assets/styles/_weather.scss
+++ b/assets/styles/_weather.scss
@@ -25,6 +25,10 @@
       background-repeat: no-repeat;
       background-size: 100% 100%;
     }
+
+    &-error {
+      color: $red;
+    }
   }
 
   &__calendar {
