--- a/assets/styles/_basic.scss
+++ b/assets/styles/_basic.scss
@@ -20,10 +20,20 @@ body,
   height: 100%;
   min-height: 100%;
   width: 100%;
+  cursor: default;
 }
 
-.container {
-  width: 100%;
-  max-width: rem(1200px);
-  margin: 0 auto;
+nav {
+  ul {
+    li {
+      cursor: pointer;
+    }
+  }
+}
+
+.weather-image {
+  width: rem(120px);
+  height: rem(120px);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
